--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,15 +1,22 @@
 #log4j.rootLogger=DEBUG,Stdout, file
-#log4j.logger.an.dpr=ERROR, errorFile
-log4j.logger.an.dpr=DEBUG, Stdout, file
+log4j.logger.an.dpr=ERROR, errorFile
+log4j.logger.an.dpr=INFO, file
+ ### log just the SQL
+log4j.logger.org.hibernate=DEBUG, sqlFile
 
 log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.Stdout.layout.conversionPattern=%-5p - %-20.20c{1} .%M - %m\n
+log4j.appender.Stdout.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=./logs/cyclingResultsApi.log
+log4j.appender.file.File=${jboss.server.log.dir}/log/cyclingResultsApi.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.conversionPattern= %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %-26.26c{1} .%M - %m\n
+log4j.appender.file.layout.conversionPattern= %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %c{1} .%M - %m\n
+
+log4j.appender.sqlFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.sqlFile.File=${jboss.server.log.dir}/log/cyclingResultsApi.log
+log4j.appender.sqlFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.sqlFile.layout.conversionPattern= %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %c{1} .%M - %m\n
 
 log4j.appender.errorFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.errorFile.File=./logs/cyclingResultsApi_error.log
