--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #log4j.rootLogger=DEBUG,Stdout, file
 log4j.logger.an.dpr=ERROR, errorFile
-log4j.logger.an.dpr=INFO, file
+log4j.logger.an.dpr=DEBUG, file
  ### log just the SQL
 log4j.logger.org.hibernate=DEBUG, sqlFile
 
@@ -9,17 +9,17 @@ log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.Stdout.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=${jboss.server.log.dir}/log/cyclingResultsApi.log
+log4j.appender.file.File=${jboss.server.log.dir}/cyclingResultsApi.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern= %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %c{1} .%M - %m\n
 
 log4j.appender.sqlFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.sqlFile.File=${jboss.server.log.dir}/log/cyclingResultsApi.log
+log4j.appender.sqlFile.File=${jboss.server.log.dir}/sqlCyclingResultsApi.log
 log4j.appender.sqlFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.sqlFile.layout.conversionPattern= %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %c{1} .%M - %m\n
 
 log4j.appender.errorFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.errorFile.File=./logs/cyclingResultsApi_error.log
+log4j.appender.errorFile.File=${jboss.server.log.dir}//cyclingResultsApi_error.log
 log4j.appender.errorFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.errorFile.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
